# i2cbridge

./: .gitignore  Makefile  adapter.brd  adapter.pro  adapter.sch  autogen.sh  client  client_inet.c  configure.ac  i2c_adapter_trove.scad  i2c_adapter_trove.stl  i2cbridge.c  i2cbridge.h  wd-adapter.brd  wd-adapter.sch  wd-switch.brd  wd-switch.sch
adapter/: README.txt  adapter.sch  i2c_adapter_trove.gcode  wd-adapter.sch  wd-switch.brd
debian/: .gitignore  changelog  control  rules
doc/: Makefile.am  i2cbridge.1.in  i2cbridge_iclient.1.in  i2cbridge_uclient.1.in
src/: Makefile.am  client_inet.c  client_unix.c  i2cbridge.c  i2cbridge.h
